--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@hapi/hapi": "^21.4.0",
+    "nanoid": "^3.3.11",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
